hphp/hack/test/typecheck/instance_method_visibility.php.exp
File "instance_method_visibility.php", line 9, characters 11-13:
You cannot access this method (Typing[4112])
  File "instance_method_visibility.php", line 4, characters 20-22:
  This member is private
